# atmega328p-startup-test

./: CMakeLists.txt  atmega328p.ld  todo
cmake/: avr-gcc.cmake
src/: atmega328p_startup.s  main.s
